fixed an overflow bug, updated some throwies, updated some homepage stuff

--- a/src/components/Throwy/Throwy.module.scss
+++ b/src/components/Throwy/Throwy.module.scss
@@ -24,13 +24,13 @@
 }
 
 :global(.plant) {
-  transform: translate(1167.39px) translateY(-425.212px) rotateX(8deg) rotateY(8deg);
+  transform: translate(1267.39px) translateY(-255.212px) rotateX(8deg) rotateY(8deg);
   position: absolute;
   z-index: 9999;
 }
 
 :global(.toy) {
-  transform: translate(-127.39px) translateY(-625.212px) rotateX(8deg) rotateY(8deg);
+  transform: translate(-127.39px) translateY(-555.212px) rotateX(8deg) rotateY(8deg);
   position: absolute;
   z-index: 9999;
 }
